src/css/movieDetails.css
body {
    background-color: #19181F;
}

.movie-details-image {
    position: relative;
}

.movie-details-image:before {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0,0,0,0.45);
}

.movie-details-image img {
    width: 100%;
    height: 1300px;
    object-fit: cover;
    object-position: top;
    text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
}

.movie-details-intro {
    position: absolute;
    z-index: 1;
    padding-left: 10%;
    padding-top: 200px;
}

.movie-details-intro h1 {
    font-size: 80px;
    color: white;
    width: 1200px;
}

.movie-details-intro p {
    font-size: 20px;
    color: #ebebeb;
}

.movie-details-intro-content-left {
    float: left;
    padding-right: 30px;
}

.movie-details-intro-content-center {
    float: left;
    padding-right: 30px;
}

.movie-details-intro-content-right {
    float: left;
}

.movie-details-button {
    padding-top: 70px;
}

.movie-details-button-watch {
    padding: 16px 45px;
    border-radius: 45px;
    font-size: 25px;
    color: black;
    background-color: white;
    border: none;
    cursor: pointer;
}

.movie-details-content {
    display: grid;
    grid-template-columns: 50%;
    padding: 40px 0px 20px 10%;
    background-color: #3A0202;
    opacity: 0.8;
    position: absolute;
    z-index: 1;
    width: 1300px;
    height: 400px;
    margin-top: 700px;
    border-radius: 0 70px 70px 0;
}

.movie-details-content p {
    color: #c7c7c7;
}

.movie-details-content h2 {
    color: white;
    font-size: 19px;
}

.movie-details-grid {
    padding-right: 20px;
}

.movie-videos-container {
    position: absolute;
    right: 100px;
    top: 200px;
}

.movie-details-video-content iframe{
    border: none;
    border-radius: 10px;
    margin-bottom: 25px;
}

.movie-credits-container {
    position: absolute;
    padding-left: calc(10% + 600px);
    margin-top: -565px;
    z-index: 1;
    opacity: 0.8;
    width: 1250px;
}

.movie-credits-container p {
    color: #c7c7c7;
}

.movie-credits-container h2 {
    color: white;
    font-size: 19px;
}

.movie-details-crew {
    padding-top: 95px;
}

.movie-details-video-content:nth-child(4) {
    display: none;
}

.similar-movies-section {
    padding: 1%;
}

.similar-movies-section h1 {
    text-align: center;
}

.similar-movies-header {
    font-size: 70px;
    color: white;
    padding-bottom: 40px;
}

@media screen and (max-width: 1900px) {
    .movie-videos-container {
        right: 15px;
    }
}

@media screen and (max-width: 1815px) {
    .movie-videos-container {
        position: relative;
        right: 0px;
        top: 0px;
        padding: 4%;
    }

    .movie-details-video {
        display: grid;
        /* grid-template-columns: repeat(3, 33%); */
        grid-template-columns: repeat(auto-fit, minmax(30%, 5fr));
    }

    .movie-details-video-content{
        margin: auto;
    }
}

@media screen and (max-width: 1700px) {
    .movie-details-video {
        display: grid;
        /* grid-template-columns: repeat(2, 50%); */
        grid-template-columns: repeat(auto-fit, minmax(50%, 500fr));
    }

    .movie-details-video-content:nth-child(3) {
        display: none;
    }
}

@media screen and (max-width: 1300px) {
    .movie-details-intro {
        width: 100%;
        padding: 5%;
        margin-top: 200px; 
        left: 0;
    }

    .movie-details-intro h1 {
        width: 100%;
        font-size: 80px;
    }

    .movie-details-content {
        height: 585px;
        grid-template-columns: 500px;
        padding-left: 5%;
        width: 100%;
        border-radius: 40px;
    }

    .movie-details-grid {
        padding-top: 200px;
    }

    .movie-details-grid:last-child {
        padding: 0;
        margin-top: -120px;
    }

    .movie-credits-container{
        padding-left: 5%;
    }

    .movie-details-crew {
        padding-top: 25px;
    }

}

@media screen and (max-width: 1100px) {
    .movie-details-video {
        display: grid;
        grid-template-columns: repeat(1, 100%);
    }

    .movie-details-video-content{
        margin: auto;
    }

    .movie-details-video-content:nth-child(2){
        margin: auto;
    }
    .movie-details-video-content:nth-child(3) {
        display: block;
    }
}

@media screen and (max-width: 880px) {
    .movie-details-video-content iframe{
        width: 550px;
        height: 300px;
    }
}

@media screen and (max-width: 700px) {
    .movie-details-intro h1 {
        width: 100%;
        font-size: 60px;
    }

    .movie-details-intro-content {
        transform: scale(0.9);
        width: 115%;
        margin-left: -6%;
    }
}

@media screen and (max-width: 600px) {
    .movie-details-video-content iframe{
        width: 400px;
        height: 230px;
    }
}

@media screen and (max-width: 580px) {
    .movie-details-intro-content {
        transform: scale(0.8);
        width: 130%;
        margin-left: -12%;
    }
}

@media screen and (max-width: 550px) {
    .movie-details-intro-content {
        transform: scale(1);
        width: 100%;
        margin-left: 0%;
        display: grid;
        grid-template-columns: 100%;
    }

    .movie-details-button {
        margin-top: -50px; 
    }

    .movie-details-grid {
        padding-top: 250px;
        width: 80%;
    }

    .movie-details-grid:last-child {
        padding: 0;
        margin-top: -40px;
    }

    .movie-credits-container {
        width: 80%;
    }

    .similar-movies-header {
        font-size: 50px;
    }
}

@media screen and (max-width: 450px) {
    .movie-details-video-content iframe{
        width: 340px;
        height: 180px;
    }

    .movie-details-intro h1 {
        width: 100%;
        font-size: 40px;
    }

    .movie-details-button {
        margin-top: -50px; 
    }

    .movie-details-grid {
        padding-top: 280px;
        width: 60%;
    }

    .movie-details-grid:last-child {
        padding: 0;
        margin-top: -10px;
    }

    .movie-credits-container {
        width: 80%;
    }

    .movie-details-content {
        margin-top: 800px;
    }

    .movie-details-image img {
        height: 1400px;
    }
}

@media screen and (max-width: 400px) {
    .movie-details-video-content iframe{
        width: 300px;
        height: 160px;
    }

    .similar-movies-header {
        font-size: 40px;
    }
}

